vpc-stack.yml
AWSTemplateFormatVersion: 2010-09-09
Description: >
  VPC For Deploying the 
  Application
Parameters:
  Project:
    Description: Project template is been applied to.
    Type: String
    Default: udagram
  Environment:
    Description: An environment name that will be prefixed to resources
    Type: String
    Default: dev
    AllowedValues:
    - dev
    - staging
    - prod
  VpcCIDR:
    Description: IP range for our VPC (CIDR notation)
    Type: String
    Default: 10.0.0.0/16
  PublicCIDR:
    Type: String
    Default: 0.0.0.0/0
  PublicSubnetACIDR:
    Type: String
    Default: 10.0.1.0/24
  PrivateSubnetACIDR:
    Type: String
    Default: 10.0.10.0/24
  PublicSubnetBCIDR:
    Type: String
    Default: 10.0.20.0/24
  PrivateSubnetBCIDR:
    Type: String
    Default: 10.0.30.0/24
  
Resources:
  moduleVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
      - Key: Name
        Value: !Sub ${Project}-${Environment}-VPC

  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      VpcId:
        Ref: moduleVPC
      CidrBlock: !Ref PrivateSubnetACIDR
      Tags:
        - Key: Name
          Value: !Sub ${Project}-${Environment}-PrivateSubnetA

  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 0, !GetAZs '']
      VpcId:
        Ref: moduleVPC
      CidrBlock: !Ref PublicSubnetACIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${Project}-${Environment}-PublicSubnetA

  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [1, !GetAZs '']
      VpcId:
        Ref: moduleVPC
      CidrBlock: !Ref PrivateSubnetBCIDR
      Tags:
        - Key: Name
          Value: !Sub ${Project}-${Environment}-PrivateSubnetB

  PublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [1, !GetAZs '']
      VpcId:
        Ref: moduleVPC
      CidrBlock: !Ref PublicSubnetBCIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${Project}-${Environment}-PublicSubnetB

  InternetGateWay:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${Project}-${Environment}-IGW

  InternetGateWayVPCAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId:
        Ref: InternetGateWay
      VpcId:
        Ref: moduleVPC

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: moduleVPC
      Tags:
        - Key: Name
          Value: !Sub ${Project}-${Environment}-public-route-table

  PublicRouteTableAssociationa:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      SubnetId:
        Ref: PublicSubnetA

  PublicRouteTableAssociationb:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      SubnetId:
        Ref: PublicSubnetB

  InternetGatewayPublicRouteAssociation:
    Type: AWS::EC2::Route
    Properties:
      GatewayId:
        Ref: InternetGateWay
      RouteTableId:
        Ref: PublicRouteTable
      DestinationCidrBlock: !Ref PublicCIDR
  
  PrivateRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: moduleVPC
      Tags:
        - Key: Name
          Value: !Sub ${Project}-${Environment}-private-route-table-A

  PrivateRouteTableB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: moduleVPC
      Tags:
        - Key: Name
          Value: !Sub ${Project}-${Environment}-private-route-table-B

  PrivateRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateRouteTableA
      SubnetId:
        Ref: PrivateSubnetA

  PrivateRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateRouteTableB
      SubnetId:
        Ref: PrivateSubnetB

  NatGateway1EIP:
      Type: AWS::EC2::EIP
      DependsOn: InternetGateWayVPCAttachment
      Properties: 
          Domain: vpc

  NatGateway1: 
      Type: AWS::EC2::NatGateway
      Properties: 
          AllocationId: !GetAtt NatGateway1EIP.AllocationId
          SubnetId: !Ref PublicSubnetA

  PrivateRoute1:
      Type: AWS::EC2::Route
      Properties:
          RouteTableId: !Ref PrivateRouteTableA
          DestinationCidrBlock: 0.0.0.0/0
          NatGatewayId: !Ref NatGateway1

  PrivateRoute2:
      Type: AWS::EC2::Route
      Properties:
          RouteTableId: !Ref PrivateRouteTableB
          DestinationCidrBlock: 0.0.0.0/0
          NatGatewayId: !Ref NatGateway1

Outputs:
  VPCID:
    Value: !Ref moduleVPC
    Export:
      Name: !Sub ${Project}-${Environment}-VPCID
  VpcCIDR:
    Value: !Ref VpcCIDR
    Export:
      Name: !Sub ${Project}-${Environment}-VpcCIDR

  VPCPublicRouteTable:
    Description: Public Routing
    Value: !Ref PublicRouteTable
    Export:
      Name: !Sub ${Project}-${Environment}-PUB-RT

  VPCPrivateRouteTableA:
    Description: Private Routing AZ A
    Value: !Ref PrivateRouteTableA
    Export: 
      Name: !Sub ${Project}-${Environment}-PRI-RT-A
  
  VPCPrivateRouteTableB:
    Description: Private Routing AZ B
    Value: !Ref PrivateRouteTableB
    Export: 
      Name: !Sub ${Project}-${Environment}-PRI-RT-B

  PublicSubnetes:
    Description: A list of the public subnets
    Value: !Join [",", [!Ref PublicSubnetA, !Ref PublicSubnetB ]]
    Export:
      Name: !Sub ${Project}-${Environment}-PUB-NETS

  PrivateSubnets:
    Value: !Join [ ",", [!Ref PrivateSubnetA, !Ref PrivateSubnetB ]]
    Export:
      Name: !Sub ${Project}-${Environment}-PRIV-NETS

  PublicSubnetA:
    Description: A reference to Public subnet in 1st AZ
    Value: !Ref PublicSubnetA
    Export:
      Name: !Sub ${Project}-${Environment}-PUB-SN-A

  PublicSubnetB:
    Description: A reference to Public subnet in 2nd AZ
    Value: !Ref PublicSubnetB
    Export:
      Name: !Sub ${Project}-${Environment}-PUB-SN-B

  PrivateSubnetA:
    Description: A reference to Private subnet in 1st AZ
    Value: !Ref PrivateSubnetA
    Export:
      Name: !Sub ${Project}-${Environment}-PRI-SN-A

  PrivateSubnetB:
    Description: A reference to Private subnet in 2nd AZ
    Value: !Ref PrivateSubnetB
    Export:
      Name: !Sub ${Project}-${Environment}-PRI-SN-B

  PublicSubnetAZone:
    Description: Availability zone of the Public subent A
    Value: !GetAtt PublicSubnetA.AvailabilityZone
    Export:
      Name: !Sub ${Project}-${Environment}-PUB-SN-AZ-A
 
  PublicSubnetBZone:
    Description: Availability zone of the Public subent B
    Value:
      Fn::GetAtt: [ PublicSubnetB, AvailabilityZone ]
    Export:
      Name: !Sub ${Project}-${Environment}-PUB-SN-AZ-B

  PrivateSubnetAZone:
    Description: Availability zone of the Private subent A
    Value:
      Fn::GetAtt: [ PrivateSubnetA, AvailabilityZone ]
    Export:
      Name: !Sub ${Project}-${Environment}-PRI-SN-AZ-A

  PrivateSubnetBZone:
    Description: Availability zone of the Private subent B
    Value:
      Fn::GetAtt: [ PrivateSubnetB, AvailabilityZone ]
    Export:
      Name: !Sub ${Project}-${Environment}-PRI-SN-AZ-B

  PrivateSubnetACIDR:
    Description: Cidr for Private Subnet A
    Value:
      Ref: PrivateSubnetACIDR
    Export:
      Name: !Sub ${Project}-${Environment}-PRI-SN-A-CIDR

  PrivateSubnetBCIDR:
    Description: Cidr for Private Subnet B
    Value:
      Ref: PrivateSubnetBCIDR
    Export:
      Name: !Sub ${Project}-${Environment}-PRI-SN-B-CIDR
